--- a/voice.html
+++ b/voice.html
@@ -49,10 +49,10 @@ Enter any English sentence in the box below, and our text-to-speech tool will in
      <h2>🔊 Text to Speech</h2>
     <textarea id="text" rows="4" placeholder="Enter Your Text Here..."></textarea>
     <br>
-    <button id="playBtn">▶ Start </button>
-    <button id="pauseBtn">⏸ Pause</button>
-    <button id="resumeBtn">▶ Play</button>
-    <button id="stopBtn">⏹ Stop</button>
+    <button id="playBtn">Start </button>
+    <button id="pauseBtn">Pause</button>
+    <button id="resumeBtn">Play</button>
+    <button id="stopBtn">Stop</button>
    </div>
 </div>
 
@@ -70,4 +70,5 @@ Enter any English sentence in the box below, and our text-to-speech tool will in
 
     <script src="./app.js"></script>
 </body>
+
 </html>
